fix alignement produits

--- a/framework/src/scss/components/_etiquetteProduit.scss
+++ b/framework/src/scss/components/_etiquetteProduit.scss
@@ -17,8 +17,6 @@ $black: black;
 }
 
 .containerFront{
-    display:flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     font-family: 'PT Sans', sans-serif;
     
